--- a/public/children/grandchildren/grandchild-one.html
+++ b/public/children/grandchildren/grandchild-one.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Home</title>
+        <title>Grand Child 1</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-      Home
+      Grand Child 1
     </body>
 </html>
