chore: reproduce issue

--- a/public/foo/index.html
+++ b/public/foo/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Home</title>
+    <title>Foo</title>
   </head>
   <body>
-    Home
+    Foo
   </body>
 </html>
